--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
 
                 <!-- Bouton calculer -->
                 <button type="button" class="btn" onclick="calculateCarbon()">Calculer</button>
+                <input type="reset"  value="Réinitialiser">
             </form>
         </div>
 
